# kicad-mcp

./: .gitignore  CLAUDE.md  PROMPT-SESION-01.md  PROMPT-SESION-11.md  README.md  despertador_inteligente-erc.rpt  pyproject.toml
.claude/: settings.json
docs/: ANALISIS-ESTADO-Y-BACKLOG.md  CONTEXT.md  HOJA-DE-RUTA-V2.md  arquitectura.md  componentes-pcb.md  glosario.md  guia-paleta.md  preparacion-claude-code.md  pruebas-gui.md
docs/adr/: 0000-fronteras-inviolables.md  0001-transporte-y-alcance-mono-usuario.md  0002-versiones-de-kicad.md  0003-gates-de-autonomia.md  0004-economia-de-tokens.md  0005-linux-como-plataforma.md  0006-sin-base-de-datos.md  0007-snapshots-vivos-mtimes-none.md  0008-kipy-write-semantics-property-setter.md  0009-port-rust-diferido-con-condiciones.md  0010-borrado-de-cobre-sin-gate-g2.md  0011-autorouting-route-board.md
docs/dogfooding/: dogfood2-fricciones.md  (+1 more)
scripts/: verificar_entorno.py
tests/: conftest.py  test_autoroute.py  test_bridge_parsers.py  test_context_delta.py  test_delta.py  test_export.py  test_gate_g3.py  test_health.py  test_ipc.py  test_pcb.py  test_pcb_delete_bulk.py  test_pcb_session11.py  test_pcb_session11_gui.py  test_pcb_session16.py  test_pcb_session16_gui.py  test_pcb_session19d_gui.py  test_pcb_zones.py  test_reload_board.py  test_reload_e2e_gui.py  test_route_board.py  test_route_board_gui_slow.py  test_rules.py  test_rules_reader.py  test_sch.py  test_snapshots_store.py  test_state_builder.py  test_state_builder_cache.py  test_toon_encoder.py  test_validate.py  test_world_context.py  test_zones_e2e_gui.py
(+125 files in other folders)
